Fix Quiz Landing Page styles (footer,minor containers & spacing consistency changes)

--- a/react-app/src/pages/QuizLandingPage/QuizLandingPage.module.css
+++ b/react-app/src/pages/QuizLandingPage/QuizLandingPage.module.css
@@ -10,18 +10,21 @@
 .right {
   right: 0;
   left: 250px;
-  min-height: 100vh;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.outerContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.content {
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 3%;
+.bodyContainer {
+  width: 875px;
+  margin-bottom: 10%;
 }
 
-/* have space between header and view all link  */
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -45,17 +48,16 @@
   justify-content: space-between;
   align-items: center;
   color: var(--blue-gray);
-  margin-top: 0.5rem;
 }
 
 .subHeader h2 {
   font-size: 1.8rem;
-  margin: 1.5rem 0 2rem 0;
+  margin: 1.5rem 0 1rem 0;
 }
 
-.instructionsTitle  h2{
-  font-size: 1.8rem;
-  margin: 1.5rem 0 0 0;
+.instructions {
+  /* font-size: 1.8rem; */
+  margin: 0 0 1rem 0;
 }
 
 .noAttemptContainer {
@@ -64,11 +66,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: 1.5rem;
   margin-bottom: 1rem;
   padding: 1rem;
   border-radius: 20px;
-  color: black;
+  color: var(--blue-gray);
   font-weight: bold;
 }
 
@@ -77,7 +78,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 1.5rem;
   margin-bottom: 1rem;
   padding: 1rem;
   border-radius: 20px;
@@ -90,11 +90,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 1.5rem;
   margin-bottom: 1rem;
   padding: 1rem;
   border-radius: 20px;
-  color: black;
+  color: var(--blue-gray);
   font-weight: bold;
 }
 
@@ -110,21 +109,34 @@
   width: 200px;
 }
 
+.rightContent {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
+.icon {
+  font-size: 1.8rem;
+}
 
-
-
-
-/* ALL ABOVE IS SAME ON EVERY PAGE (with minor spacing modifications) */
-
-.viewAllLink {
-  color: var(--blue-gray);
-  font-size: 1rem;
-  font-weight: 700;
-  text-align: center;
-  text-decoration: underline;
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-right: 4%;
 }
 
 .footer {
-  margin-top: auto;
+  display: flex;
+  justify-content: flex-end;
+  width: calc(100% - 250px);
+  margin-bottom: 0;
+  position: fixed;
+  bottom: 0;
+  left: 250px;
+  box-shadow: 2px 0px 2px rgb(90, 90, 90);
+  background-color: white;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
 }
